new login button added

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -10,16 +10,17 @@
     <link rel="stylesheet" href="/main.css">
     <link rel="stylesheet" href="XLSextension/xlsextension.css">
 
-    <title>Autodesk Platform Services: Hubs Browser</title>
+    <title>APS Hubs - Export to Excel</title>
 </head>
 
 <body>
     <div id="header">
         <img class="logo" src="https://cdn.autodesk.io/logo/black/stacked.png" alt="Autodesk Platform Services">
-        <span class="title">Hubs Browser</span>
+        <span class="title">APS Hubs - Export to Excel</span>
         <button id="login" style="visibility: hidden;">Login</button>
     </div>
     <div id="sidebar">
+        <Button class="btn btn-lg btn-default" id="login_icon"><img src="https://cdn.autodesk.io/logo/black/stacked.png" height="20px"/> Sign in</Button>
         <div id="tree"></div>
     </div>
     <div id="preview"></div>
